--- a/style.css
+++ b/style.css
@@ -23,5 +23,30 @@ h3 {
     text-align: center;
     text-transform: none;
     letter-spacing: 0.01em;
+}
 
+.right,
+.left {
+    width: 50px;
+    height: 50px;
+    transition: .5s;
+    box-shadow: -3px 3px 0 rgba(255, 255, 255, .5);
+    cursor: pointer;
+}
+
+.left {
+    transform: rotate(45deg);
+    float: left;
+    margin-left: 35px;
+}
+
+.right {
+    transform: rotate(225deg);
+    float: right;
+    margin-right: 35px;
+}
+
+.right:hover,
+.left:hover {
+    box-shadow: -4px 4px 0 white;
 }
